[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/HUD.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Score" type="Label" parent="."]
margin_right = 240.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Score: 0"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -19.5
margin_bottom = 20.5
custom_fonts/font = SubResource( 1 )
text = "BREAKOUT"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -47.5
margin_top = -200.0
margin_right = 47.5
margin_bottom = -200.0
custom_fonts/font = SubResource( 1 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
